examples/kju/positive/type_inference/simple_int.kju
fun kju() : Unit
{
    var a : ?;
    a = 5;
}
