examples/kju/negative/type_inference/ambiguous_type.kju
fun kju() : Unit
{
    var a : ?;
}
